# acam-desktop

.github/workflows/: publish.yml
src-tauri/: .gitignore  Cargo.toml  build.sh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
